Fix: 병합 후 오류 수정